create route group

--- a/public/components/nav-bar/nav-bar.html
+++ b/public/components/nav-bar/nav-bar.html
@@ -30,7 +30,7 @@
                 </li>
 
                 <li data-bind="css: { active: route().page === 'admin' }">
-                    <a href="admin.html">Admin</a>
+                    <a href="#!/admin">Admin</a>
                 </li>
             </ul>
 
