tabs init bug buggy

--- a/public/components/nav-bar/nav-bar.html
+++ b/public/components/nav-bar/nav-bar.html
@@ -32,6 +32,9 @@
                 <li data-bind="css: { active: route().page === 'admin' }">
                     <a href="#!/admin">Admin</a>
                 </li>
+                <li data-bind="css: { active: route().page === 'admin-article' }">
+                    <a href="#!/admin/article">Articles</a>
+                </li>
             </ul>
 
         </div>
